<resources>
    <string name="app_name">Join</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="receitas">Receitas</string>
    <string name="despesas">Despesas</string>
    <string name="title_activity_home">R$ 2.000,00</string>
    <string name="receita">Receita</string>
    <string name="despesa">Despesa</string>
    <string name="descri_o">Descrição</string>
    <string name="adicionar_receita">Salvar receita</string>
    <string name="adicionar_despesa">Salvar despesa</string>
    <string name="r_0_00">R$0,00</string>
    <string name="selecione_uma_categoria">Selecione uma categoria</string>
    <string name="data_da_transac_o">Data da transacão</string>
    <string name="consolidado">Consolidado</string>
    <string name="deseja_remover_essa_transa_o">Deseja remover essa transação?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="voc_ainda_n_o_tem_nenhuma_transa_o_cadastrada_n_click_no_bot_o_para_adicionar_uma_transa_o">Você ainda não tem nenhuma transação cadastrada.\nClick no botão \'+\' para adicionar uma transação</string>
    <string name="filtrar_ltimas_de_hoje">Filtrar últimas de <b>hoje.</b></string>
    <string name="filtrar_da_ltima_semana">Filtrar da <b>última semana.</b></string>
    <string name="filtrar_dos_ltimos_15_dias">Filtrar dos <b>últimos 15 dias</b></string>
    <string name="filtrar_ltimas_deste_m_s">Filtrar últimas <b>deste mês</b></string>
    <string name="filtrar_periodo">Selecionar período</string>
    <string name="informe_o_per_odo">Informe o período</string>
    <string name="per_odo_inv_lido">Período inválido</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="de">De</string>
    <string name="previsto">Previsto: %s</string>

    <array name="categorias">
        <item>Selecione uma categoria</item>
        <item>Alimentação</item>
        <item>Renda</item>
        <item>Compras</item>
        <item>Habitação</item>
        <item>Transporte</item>
        <item>Veículo</item>
        <item>Vida e entreterimento</item>
        <item>Comunicação, PC</item>
        <item>Despesas financeiras</item>
        <item>Investimentos</item>
        <item>Outros</item>
    </array>
</resources>
