<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogAlerta"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity=""
    android:background="@drawable/background_card"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informe_o_per_odo"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDatas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/de" />

            <EditText
                android:id="@+id/editDataInicio"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:inputType="none"
                android:editable="false"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content"
                android:hint="@string/dd_mm_aaaa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="á" />

            <EditText
                android:id="@+id/editDataFim"
                android:textAlignment="center"
                android:inputType="none"
                android:editable="false"
                android:textCursorDrawable="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dd_mm_aaaa" />
        </LinearLayout>

        <TextView
            android:id="@+id/textMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/per_odo_inv_lido"
            android:textAlignment="center"
            android:textColor="@color/despesa"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llDatas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textMsg">

            <LinearLayout
                android:id="@+id/llBtnPesquisar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:backgroundTint="@color/gray_dark">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnPesquisa"
                    style="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_search"
                    android:tint="@color/gray_dark" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>