<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="br.com.bruno.join.viewModel.TransacaoViewModel"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_card"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_close"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/llTTransacao"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="20sp"
                    android:background="@drawable/background_primary_white"
                    android:orientation="vertical"
                    android:onClick="@{() -> viewModel.clickTipoTransacao()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgClose">

                    <LinearLayout
                        android:id="@+id/llToogleParent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:weightSum="2">

                        <LinearLayout
                            android:id="@+id/llToogle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/background_primary"
                            android:orientation="vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/textReceita"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/receita"
                            android:textColor="@color/whiteDark"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/textDespesa"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/despesa"
                            android:textColor="@color/gray_dark"
                            android:textSize="17sp" />

                    </LinearLayout>

                </RelativeLayout>

                <faranjit.currency.edittext.CurrencyEditText
                    android:id="@+id/editValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@={viewModel.valor}"
                    android:background="@android:color/transparent"
                    android:hint="@string/r_0_00"
                    android:imeOptions="actionDone"
                    android:textCursorDrawable="@null"
                    android:inputType="number"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    app:layout_constraintStart_toStartOf="@id/llTTransacao"
                    app:layout_constraintEnd_toEndOf="@id/llTTransacao"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    app:groupDivider="."
                    app:layout_constraintTop_toBottomOf="@id/llTTransacao"
                    app:locale="pt_BR"
                    app:monetaryDivider=","
                    app:showSymbol="true" />

                <EditText
                    android:id="@+id/textDescription"
                    android:text="@={viewModel.descricao}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textCursorDrawable="@null"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/descri_o"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/editValue" />

                <Spinner
                    android:id="@+id/spnCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:spinnerMode="dropdown"
                    android:onItemSelected="@{(parent,view,pos,id) -> viewModel.itemSelecionado(parent,view,pos,id)}"
                    app:layout_constraintTop_toBottomOf="@id/textDescription" />

                <Button
                    android:id="@+id/btnAddReceita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/adicionar_receita"
                    android:onClick="@{() -> viewModel.salvarTransacao()}"
                    android:textColor="@color/receita"
                    app:layout_constraintTop_toBottomOf="@id/spnCategory"
                    android:background="@drawable/button_green"/>

                <Button
                    android:id="@+id/btnAddDespesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/adicionar_despesa"
                    android:textColor="@color/despesa"
                    android:onClick="@{() -> viewModel.salvarTransacao()}"
                    app:layout_constraintTop_toBottomOf="@id/spnCategory"
                    android:background="@drawable/button_pink"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </LinearLayout>
</layout>